* added json-generator to generate json for all autonomous custom elements * added json-dispatcher to dispatch json to specific elements * fixed some grid layout issues in IE11 * added possibility to add more webcomponents live in the browser * introduced new main.js to have a place to write some JS for the site

--- a/src/main.css
+++ b/src/main.css
@@ -42,7 +42,7 @@ table th {
 textarea {
   width: 95%;
   height: 250px;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .grid-1 {
@@ -102,4 +102,9 @@ textarea {
 .row-4 {
   grid-row: 4;
   -ms-grid-row: 4
+}
+
+.row-5 {
+  grid-row: 5;
+  -ms-grid-row: 5
 }
